welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: ')' expected but 'else' found.
  else if((a==b) || (b==c) || (a==c)){
  ^